nohup.out
Python 3.7.10 (default, Feb 26 2021, 10:16:00) 
[Clang 10.0.0 ] :: Anaconda, Inc. on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> >>> 
KeyboardInterrupt
>>> 
KeyboardInterrupt
>>> 
KeyboardInterrupt
>>> 
KeyboardInterrupt
>>> 
KeyboardInterrupt
>>> 
KeyboardInterrupt
>>> >>> Python 3.7.10 (default, Feb 26 2021, 10:16:00) 
[Clang 10.0.0 ] :: Anaconda, Inc. on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> 
KeyboardInterrupt
>>> 
KeyboardInterrupt
>>> 
KeyboardInterrupt
>>> 
KeyboardInterrupt
>>> 
KeyboardInterrupt
>>> 
KeyboardInterrupt
>>> 
KeyboardInterrupt
>>> 
KeyboardInterrupt
>>> 
KeyboardInterrupt
>>> 
KeyboardInterrupt
>>> 
KeyboardInterrupt
>>> 
KeyboardInterrupt
>>> 
KeyboardInterrupt
>>> 

WARNING: Python 2.7 is not recommended. 
This version is included in macOS for compatibility with legacy software. 
Future versions of macOS will not include Python 2.7. 
Instead, it is recommended that you transition to using 'python3' from within Terminal.

Python 2.7.16 (default, Nov 23 2020, 08:01:20) 
[GCC Apple LLVM 12.0.0 (clang-1200.0.30.4) [+internal-os, ptrauth-isa=sign+stri on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>>   File "<stdin>", line 1
    -m code.scripts.segmentation.segmentation_twohead 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --mode IID --dataset Coco164kCuratedFew 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --dataset_root /Users/mihai/Documents/School/TUDelft/DeepLearning/IIC/datasets/cocostuff-data
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --model_ind 555 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --arch SegmentationNet10aTwoHead 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --num_epochs 4800 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --lr 0.0001 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --lamb_A 1.0 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --lamb_B 1.5 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --num_sub_heads 1 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --batch_sz 120 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --num_dataloaders 1 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --use_coarse_labels 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --output_k_A 15 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --output_k_B 3 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --gt_k 3 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --pre_scale_all 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --pre_scale_factor 0.33 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --input_sz 128 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --half_T_side_sparse_min 0 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --half_T_side_sparse_max 0 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --half_T_side_dense 10 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --include_rgb  
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --coco_164k_curated_version 6 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --use_uncollapsed_loss 
    ^
IndentationError: unexpected indent
>>>   File "<stdin>", line 1
    --batchnorm_track > gnoded1_gpu0123_m555_r1.out &
    ^
IndentationError: unexpected indent
>>> >>> 
  File "<stdin>", line 0
    
    ^
SyntaxError: I/O error while reading
>>> 
  File "<stdin>", line 0
    
    ^
SyntaxError: I/O error while reading
>>> 
/Users/mihai/opt/anaconda3/envs/iic/lib/python3.7/site-packages/sklearn/utils/linear_assignment_.py:22: FutureWarning: The linear_assignment_ module is deprecated in 0.21 and will be removed from 0.23. Use scipy.optimize.linear_sum_assignment instead.
  FutureWarning)
usage: segmentation_twohead.py [-h] --model_ind MODEL_IND --arch ARCH
                               [--opt OPT] [--mode MODE] --dataset DATASET
                               --dataset_root DATASET_ROOT
                               [--use_coarse_labels]
                               [--fine_to_coarse_dict FINE_TO_COARSE_DICT]
                               [--include_things_labels]
                               [--incl_animal_things]
                               [--coco_164k_curated_version COCO_164K_CURATED_VERSION]
                               --gt_k GT_K --output_k_A OUTPUT_K_A
                               --output_k_B OUTPUT_K_B [--lamb_A LAMB_A]
                               [--lamb_B LAMB_B] [--lr LR]
                               [--lr_schedule LR_SCHEDULE [LR_SCHEDULE ...]]
                               [--lr_mult LR_MULT] [--use_uncollapsed_loss]
                               [--mask_input] [--num_epochs NUM_EPOCHS]
                               --batch_sz BATCH_SZ
                               [--num_dataloaders NUM_DATALOADERS]
                               [--num_sub_heads NUM_SUB_HEADS]
                               [--out_root OUT_ROOT] [--restart]
                               [--save_freq SAVE_FREQ] [--test_code]
                               [--head_B_first] [--batchnorm_track]
                               [--no_sobel] [--include_rgb] [--pre_scale_all]
                               [--pre_scale_factor PRE_SCALE_FACTOR]
                               [--input_sz INPUT_SZ] [--use_random_scale]
                               [--scale_min SCALE_MIN] [--scale_max SCALE_MAX]
                               [--jitter_brightness JITTER_BRIGHTNESS]
                               [--jitter_contrast JITTER_CONTRAST]
                               [--jitter_saturation JITTER_SATURATION]
                               [--jitter_hue JITTER_HUE] [--flip_p FLIP_P]
                               [--use_random_affine]
                               [--aff_min_rot AFF_MIN_ROT]
                               [--aff_max_rot AFF_MAX_ROT]
                               [--aff_min_shear AFF_MIN_SHEAR]
                               [--aff_max_shear AFF_MAX_SHEAR]
                               [--aff_min_scale AFF_MIN_SCALE]
                               [--aff_max_scale AFF_MAX_SCALE]
                               [--half_T_side_dense HALF_T_SIDE_DENSE]
                               [--half_T_side_sparse_min HALF_T_SIDE_SPARSE_MIN]
                               [--half_T_side_sparse_max HALF_T_SIDE_SPARSE_MAX]
segmentation_twohead.py: error: the following arguments are required: --arch, --gt_k, --output_k_A, --output_k_B, --batch_sz
